--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,11 @@ jobs:
     runs-on: ubuntu-latest
     name: A job to say hello
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Hello world action step
         id: hello
-        uses: actions/pet-action@v1
+        uses: ./
         with:
           who-to-greet: 'Keta the Greyhound'
       # Use the output from the `hello` step
