--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "pet-action",
   "version": "1.0.0",
   "description": "Github Action Example for managing Epic Issues in Pet projects",
-  "main": "index.js",
+  "main": "lib/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc && ncc build lib/main.js",
+    "format": "prettier --write **/*.ts",
+    "format-check": "prettier --check **/*.ts",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lucasponce/pet-action.git"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Lucas Ponce",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/lucasponce/pet-action/issues"
   },
@@ -20,5 +23,18 @@
   "dependencies": {
     "@actions/core": "^1.2.6",
     "@actions/github": "^4.0.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^24.0.13",
+    "@types/node": "^12.0.4",
+    "@types/semver": "^6.0.0",
+    "@types/minimatch": "^3.0.0",
+    "@types/js-yaml": "^3.12.1",
+    "@vercel/ncc": "^0.23.0",
+    "jest": "^24.8.0",
+    "jest-circus": "^24.7.1",
+    "prettier": "^1.17.1",
+    "ts-jest": "^24.0.2",
+    "typescript": "^3.5.1"
   }
 }
