--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 on:
   issues:
-    types: [opened, edited, deleted, closed, reopened, labeled]
+    types: [edited, closed, reopened, labeled]
 jobs:
   sync-epic-job:
     runs-on: ubuntu-latest
