--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,7 @@ on:
     types: [edited, closed, reopened, labeled]
 jobs:
   sync-epic-job:
+    if: contains(github.event.issue.labels.*.name, 'subtask')
     runs-on: ubuntu-latest
     name: Sync epic issues with subtasks issues
     steps:
