--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,10 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     name: Sync epic issues with subtasks issues
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
       - name: Sync Epic Issues
         id: sync-epic
-        uses: ./
+        uses: kiali/kiali-epic-action@v1
         with:
           TOKEN: ${{ secrets.GITHUB_TOKEN }}
